# ChangeLog for dev-libs/libinput
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libinput/ChangeLog,v 1.13 2015/03/15 13:18:23 pacho Exp $

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> libinput-0.7.0.ebuild:
  x86 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> libinput-0.7.0.ebuild:
  ppc64 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> libinput-0.7.0.ebuild:
  ppc stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> libinput-0.7.0.ebuild:
  amd64 stable, bug 534012

  23 Feb 2015; Pacho Ramos <pacho@gentoo.org> libinput-0.7.0.ebuild,
  libinput-0.8.0.ebuild, libinput-0.9.0.ebuild:
  ppc/ppc64/x86 keyword, bug #533420

  22 Feb 2015; Matt Turner <mattst88@gentoo.org> libinput-0.7.0.ebuild,
  libinput-0.8.0.ebuild, libinput-0.9.0.ebuild:
  Added ~alpha, bug 533420.

  21 Feb 2015; Matt Turner <mattst88@gentoo.org> libinput-0.7.0.ebuild,
  libinput-0.8.0.ebuild, libinput-0.9.0.ebuild:
  Added ~mips, bug 538828.

  21 Feb 2015; Matt Turner <mattst88@gentoo.org> libinput-0.7.0.ebuild,
  libinput-0.8.0.ebuild, libinput-0.9.0.ebuild:
  Restrict tests, since they require privileged access to /dev/uinput. Bug
  539270.

  05 Feb 2015; Jeroen Roovers <jer@gentoo.org> libinput-0.9.0.ebuild:
  Marked ~hppa (bug #533420).

*libinput-0.9.0 (04 Feb 2015)

  04 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libinput-0.9.0.ebuild:
  Version bump, bug #536868.

*libinput-0.8.0 (04 Feb 2015)

  04 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libinput-0.8.0.ebuild, metadata.xml:
  Version bump, bug #536868. Add x11 to maintainers.

  30 Dec 2014; Markus Meier <maekke@gentoo.org> libinput-0.7.0.ebuild:
  add ~arm, bug #533420

*libinput-0.7.0 (23 Dec 2014)

  23 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> +libinput-0.7.0.ebuild,
  +metadata.xml:
  Initial ebuild. Needed for wayland support in media-libs/clutter. Closes bug