@@ -6,13 +6,23 @@ DIST libinput-0.8.0.tar.xz 504908 SHA256 57747436ac6a2ed9fe7745093acdd96fdce699b
 DIST libinput-0.9.0.tar.xz 510512 SHA256 309043976f41f5451c2a4b1c25bc2993b18aecb22524d797f21eb6b6c968ff0d SHA512 a6f718215428eda45ac00c25d0b62ada84bf924822cb66e0a9b28f4cfc36e7d1678f2dfb47afae16ce4c277d589adcf97aefe8e2e5a154873b649fe4a84527a1 WHIRLPOOL 23da6dbcd7b17000cea641e0931db8a9b2ad34b0655e4e31b0419ff4799adc59d2646b10316e073ad49695ebd652c150abf05c39d15c735ecb1d97f6f8c1d8de
 EBUILD libinput-0.7.0.ebuild 1100 SHA256 42ff6e2c6d8365dbfcf7311d53b6a87f486d69fa13ae8c8973b7475c1c1df7e1 SHA512 bef35a2a639245fc3b6b530df9c9c8f08fb57e41af66a33b3884ae1c1fb8b69635f7ef73d832439bae2ef0361949aca8f6dddaa3c4868b9137b764fa2aca8900 WHIRLPOOL 666cfad62c9d20ca2af278c7104d196111bf11e0af498d8a25a84236ae14f2e158c2a98663b76a3c8f32c8331712756ad7e5962ea6c3adead7d8a9419c935a61
 EBUILD libinput-0.8.0.ebuild 1202 SHA256 5abd2fd862298e5d915484bee0e3d1e0a2f965c2f5340197751c69b126183f75 SHA512 44b55ca829bec6e8ce151e107a1dd4727622eb19476929102d4151c6e8a39e54e172c3a71d1c24415362d225a6ac6f7e04a865ae0bb83ddb25754ddea88a6c1c WHIRLPOOL e62b65da25393396360cd2d8cb5f458aeec0d4ddffe5e2de44759ccfcfc5a37ce75ef55b7bbd2818c1115ba96293189f9a4cca11d9940212a1da9d362eeefe90
-EBUILD libinput-0.9.0.ebuild 1208 SHA256 71731253bc70420a701b4edf57043df6a5d7d4ceba0b1bb840c6eee97f3b4df2 SHA512 f5f2ac75e2066c0ba6885e55bcb0ec6ec5c592b8051deadb56e8ef49a183a54f4d8a926293fd148e1ac787b112552fc3dc2afefbad1c12251062dd091369313d WHIRLPOOL eecc0c066aa1e72287c8f59e20c55574f16a2a89be7dc2fc3c34a22d7a3d331a374797f5b4f2ce773f85c386987b3b81e8765d6ed1f79d16cd30ae8a27dbbaaf
-MISC ChangeLog 2012 SHA256 e6f7c72508051f6011c0ff4669d45b229060a63253bec613152ce33b2a76d529 SHA512 b217d467b2d515eaac31862a053538dc87432b17c5f113ec194aa9af9ba822c0ceed8989618927003cf33775acd4f8cbe6a9a00bc5b00fd04f65d4910603c617 WHIRLPOOL 9830fc0d4189ab6d5c9f0faf956a22645a35f8e6fd8253eac0de06de6b50b33b6745580e9ea9d0208afbcfecb5b105fe78b3c00fec3da29b90af237ccae2325e
+EBUILD libinput-0.9.0.ebuild 1245 SHA256 65956a9739bccf43cd418f61a7e3f87ecd7ac97516b857f00c7b40f47f322b13 SHA512 736acab986b710ac81036d061fc70d9349a2da6bc71498d8ff21a8a1168a7cbea66b574d352cdb74d7c1f37c508131271d3ca87acaaac72852f6444ccc9c499e WHIRLPOOL a37a7c870be8258399eb8a19d372fab8a3e221f23b9e4ca21c0969e576a164e9db858f499d8f779a1e63b984e316a23adae59ef7d447e5e8cd7217dd191ac7d8
+MISC ChangeLog 2137 SHA256 311702affe43ebbdbb2308290b18390bc89b270f3dfa3164d378b36b8601c901 SHA512 128723001dec781000c589221946f16ee0559640825a870517060f443f2dd97da58f409c965c79f56a9f76b781576f5c215e3df30505f5d793c99d2ab5446e77 WHIRLPOOL d741bb6417b77821f156b98ad36916b6c3407857c696d237cb294c8b84e435f179bdee7a4c3c72bf1b5dd02b4de111dad05d820d7b46743e3884db13fc1a1b00
 MISC metadata.xml 175 SHA256 6922194947ab33efa21c47a06cdbf95117380c047121e54d25a0708327c5c078 SHA512 43152f2446e33611d557e09fef868d488b02dc790896ed303b18c680870f6f1f46ae3467a21d35be20dbabcddd99b3f593386eacc65550f0ec67772c73474b27 WHIRLPOOL c9563bc57117e08e1e8d6019db31f06be261fae6e5fc04d9a11dc31074d6c225d8fa6e6b62e88a9a1d1d552eeed6f3b29f0f49bd6fb872040a69e81962bcc58e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUFhpEACgkQCaWpQKGI+9QVYACdHUd97S7xq+8WfG86C9J+7wu3
-pMEAn2o5otAlfytJGhnGkv50h0BmQ7Fo
-=rc40
+iQIcBAEBCAAGBQJVCGOJAAoJEPGu1DbS6WIAd+UP/0IqhdzUvECvElb8teLOKWms
+V6NjoqAtoRml359vB2QS+tTJP+qOj04QmVWpul2fam3TQUWHoDrQyAWaMb/jGYqf
+rS9sz9iSaZnr2FG4ULntT4x7Nyr37AhR8Ypm7VioCMfes1NwPdiojN01zKPxECPA
+z8QUK+ZCPqFcSXuXmmAsoa1Lu1MBzg2E1HW2o1iMCn9gJajSkPcOAMWDfrVQwfvK
+CzfDV9vcm8DQA8k83XDblyMtFSzOKUmJfGEHYJ1npEBrO37RVh0YAoMgRSE9jas8
+na4FMsXYdJCGkJL7/XbaCJmPlM0sSDQ4GH3udOKCX8QKG9HuTcOhHYglbW0M0gAW
+6cQXJ33Q9qJUpGxpsVGGaBse49Wo8etxMBGDqR7NlO0GaJVppm8NMlwOn538GM90
+oW/UpD1TzOQt6Ak94xH03e2IzJSab9onvPiHLLpmZqmGd8XkJuU39fKahZSzmXmp
+eClqhaGk+bAkdXtr/TtoePRujyI/5za4onQiYXrvUt1ulLf54WyfrqV58D6uhsfm
+pJViWjhPyo5B42x+6lZjBC+vkzWh1T4L2l3aLDzyL6LbI3vljocPlwwaxL09ZX+4
+FuJUQr2T+xBcz0FL2YbUBA4ZhZQqc2ATCTsWgi3OmtrJ990nrxmGOYulLRGpZPs0
+DpdP3DzL6uaa7M94y3Hv
+=BGSi
 -----END PGP SIGNATURE-----
