@@ -2,13 +2,19 @@
 Hash: SHA256
 
 DIST Roman-1.23.zip 7346 SHA256 8cf08358eae8d4f888ca41f09d28ffbace46e5f0f6c85b7206ef552135db7843 SHA512 20a2a9f3961317438b9f761bdcf16c582f57e5efe9b6c869b6170f19615f300e467f3ab555861c83e8c7930ae024381a46da64cd80002a26cae1f2d315759f74 WHIRLPOOL 6b4ae11706099de4a0aa56fa50e5e09176d1b0966e50a3f862563cc6cd3226121333a9d4d1c0bcb5bd0c15afaefae9303d8511061f7784d1d37d2d6c6a5ecd82
-EBUILD Roman-1.230.0-r1.ebuild 566 SHA256 15afc582521a21c678c87dd55ba5935e313aa0eac0b3856ababea3f9053f384e SHA512 88c0a2806a5d2a67a19a50bc6a8b941c47625109e632a32b5c91da62aa6ed714637d5e5dda4e43aef2dc1704b1bc4106f96b6b3a8aaf6fabff62922a74759afb WHIRLPOOL e0ed8dd935ba2dd3b12edd26e7756bb99ba06d6f835e7d8f7587460bd3d2df2d4e9d74cccce94e59921d526d56e1a224fd470d2774e349107cd4193ef3a6405d
-MISC ChangeLog 1619 SHA256 d6401709f5f3e0d3316f95657725cadb2f5f6553aed7e2781fa3da17a05addc4 SHA512 35bac61012f9f27cc2862bc72e9936f134a27f23fdb64149d4502667b6f7f4d0f961a2936391e4b9c7dabb94f7b640c01e77f60991d37074a506d2d35d4a6821 WHIRLPOOL 58b47774ec2791f8b6491d7d110459c93b7862cf909db822edead431e7416b8fc48fe6f6459539ff9eab201e545afe424ff4e884b3d1dca3baaf865b0f88445a
+DIST Roman-1.24.tar.gz 4470 SHA256 3080375bf5f96cb15310d1870a75472dc1fd2371273c6a546b81401b6f674a28 SHA512 82df0d817f55ad6a8fd467e92c97e27c07bd6cb04f0accb65468d6594d3e3ea545383f1c3763215d8c984cc31c808fe979c7d6c74dab1609ec822a9f256709e0 WHIRLPOOL 12beea32a3ee784bd4dd6acdc9b020838f13e5fc9d6c46873e77f7297ff15bffe7a6d6b5ef2523a0e3b64a5a56ad7439629fa307492c9a2cebcdd6765b636f15
+EBUILD Roman-1.230.0-r1.ebuild 572 SHA256 aff63e0e7df46f745f36d613bcb9be8514a2a42300ce96c1c0c082ef1cc83a71 SHA512 944e81540eb18f49514de5cea68ca2a9c002bfe96703ad197835295d707d52e176de8f96fa351680876b031a8299daa929e354de56603f3ff6a9b5f85874430e WHIRLPOOL ebe94f54fadcfe8d47cd3c2c62f843f2977730d97fd6f86f29e0825baa25a7738226bfbcea5246000ed52e800b40a1363f63f448756d381017064dbc5d2db363
+EBUILD Roman-1.240.0.ebuild 574 SHA256 01a151d3bbe19ec2315ad7caadbac92335df782f1f26a4f2f5fdb01a1f8a64ec SHA512 fa1a223f095ca3b0bdde05f13c983eba33ec9794f4df4a079410a6a8936ababad8909aaa1de27a948248ed452666b7f061b71dac00606179578dc22d6426e6c1 WHIRLPOOL 99b7a9f3fde17a5081428e6fec0a278de78099835eae712954cea5dcff844a3aee0c2f839367437ec9ad9acddf386a876478a5363c0aa0dc2915918d99aaf2ed
+MISC ChangeLog 1776 SHA256 75d63f7c26a22ad724ea3b6c39b9c73b65c10bd6ea5f45bce3e811635f2bff79 SHA512 2716a72212ce59c69be366eaa25dec9f861134fb44b3b6733141fabccb917a27a2e26e9a172a64e9cd99608c69da0a842b4c971117d5a4002af5b6e8bc38c74e WHIRLPOOL b61d26cbc84f858f27f60b61785f62784330671a5b5c1a82bb5a3b1ad90eba75a7ccb0c22a976df81448a4f92c1a8ade3d86675aee6bcca8a6bdd8b3dbb9efac
 MISC metadata.xml 464 SHA256 da208b44569756d8afc966cf4fcc215ccb5afd6e20a19d75d45354fb7393f254 SHA512 96e9cf467754bb25b7914f84961a4c884d308f3a8c2472995467c72c57fd2c15f405a1ae35b94bf82aca33b17e066667ec95f8078453e69c74825498baf56a24 WHIRLPOOL 8a5dfc541673b13f6cf505d13e369aca8c08f866d8e87c0c6009570060e13a1eef1a68bc189599ad53b1edc8e31e2b72c3f33b18864e5cab29d48608186c6723
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlP3pGsACgkQ2ugaI38ACPAk3wD8CISm/nrBWH3UFkpuQCpLJmAl
-EKJVx/N4mGVGBR6zUxEBAJKO6QF6Kcy33Vpn8aKvd0gzcviYPPBpRAf1/jrxyMeZ
-=nn5l
+iQEcBAEBCAAGBQJVCGRXAAoJEJGRpfGTSRu4hjwH/io98qFvQLybACQ3bIlwYZMZ
+t39M2A09G0HS+1hnc6BfQMrYvCo2t0IGNzbwXVp+fga9YTDLNpVe+yynM4vyy0G4
+AkKLeLyfPLSOC8ZAWuWRFj7zwUwDdbpVXA5jkRWn0lZhTgmbG0O8drQz5GtQxDQb
+bbRourH5U6qdswOq88POmOF3McdMdoZIG1HJ1DAFMzxCJoziquhl3NI/g/2FIx3Z
+t0GaMkhuWotpYV2TSgHgp73z16MlRnlRLQELAK3+Pq1QIHNp0A+YNEFv6+LAn4YT
+85n+4o9l8Oe0VV5h7N++OIjld1hPT9X3CfNM3dPFhTp81+9riNp1Eib22XJgrUQ=
+=wvNJ
 -----END PGP SIGNATURE-----
