@@ -4,10 +4,10 @@ DESCRIPTION=Perl module for conversion between Roman and Arabic numerals
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/Roman/
 IUSE=test
-KEYWORDS=amd64 ~arm ~arm64 ~mips ~s390 x86 ~amd64-linux ~x86-linux
+KEYWORDS=~amd64 ~arm ~arm64 ~mips ~s390 ~x86 ~amd64-linux ~x86-linux
 LICENSE=|| ( Artistic GPL-1+ )
 RDEPEND=dev-lang/perl:=[-build(-)]
 SLOT=0
-SRC_URI=mirror://cpan/authors/id/C/CH/CHORNY/Roman-1.23.zip
+SRC_URI=mirror://cpan/authors/id/C/CH/CHORNY/Roman-1.24.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=16410bc0d3f5cbce962f804db12d4313
+_md5_=898ac8c7939904942c8158c7fc649539
