@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare test unpack
-DEPEND=>=dev-qt/qtcore-5.4.1:5[debug=] >=dev-qt/qtgui-5.4.1:5[debug=] >=dev-qt/qtnetwork-5.4.1:5[debug=] >=dev-qt/qtscript-5.4.1:5[debug=] >=dev-qt/qtsql-5.4.1:5[debug=] >=dev-qt/qtwidgets-5.4.1:5[debug=] designer? ( >=dev-qt/designer-5.4.1:5[debug=] >=dev-qt/qtdeclarative-5.4.1:5[debug=] ) opengl? ( >=dev-qt/qtopengl-5.4.1:5[debug=] ) webkit? ( >=dev-qt/qtwebkit-5.4.1:5[debug=] ) xml? ( >=dev-qt/qtxmlpatterns-5.4.1:5[debug=] ) test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost ) dev-lang/perl virtual/pkgconfig test? ( >=dev-qt/qttest-5.4.1:5[debug=] )
-DESCRIPTION=Legacy declarative framework for Qt4 compatibility for building dynamic user interfaces
-EAPI=5
-HOMEPAGE=https://www.qt.io/ https://qt-project.org/
-IUSE=designer +opengl webkit xml test debug test
-KEYWORDS=~amd64 ~arm ~hppa ~x86
-LICENSE=|| ( LGPL-2.1 LGPL-3 )
-RDEPEND=>=dev-qt/qtcore-5.4.1:5[debug=] >=dev-qt/qtgui-5.4.1:5[debug=] >=dev-qt/qtnetwork-5.4.1:5[debug=] >=dev-qt/qtscript-5.4.1:5[debug=] >=dev-qt/qtsql-5.4.1:5[debug=] >=dev-qt/qtwidgets-5.4.1:5[debug=] designer? ( >=dev-qt/designer-5.4.1:5[debug=] >=dev-qt/qtdeclarative-5.4.1:5[debug=] ) opengl? ( >=dev-qt/qtopengl-5.4.1:5[debug=] ) webkit? ( >=dev-qt/qtwebkit-5.4.1:5[debug=] ) xml? ( >=dev-qt/qtxmlpatterns-5.4.1:5[debug=] ) dev-qt/qtchooser
-RESTRICT=test
-SLOT=5
-SRC_URI=http://download.qt.io/official_releases/qt/5.4/5.4.1/submodules/qtquick1-opensource-src-5.4.1.tar.xz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qt5-build	4203236286fd6aee7ce37d52ef232052	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=48f4c5935f2d143faed89601e12e9460
