@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Roman
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Roman/ChangeLog,v 1.10 2014/08/22 20:13:26 axs Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Roman/ChangeLog,v 1.11 2015/03/17 17:27:23 monsieurp Exp $
+
+*Roman-1.240.0 (17 Mar 2015)
+
+  17 Mar 2015; Patrice Clement <monsieurp@gentoo.org> +Roman-1.240.0.ebuild,
+  Roman-1.230.0-r1.ebuild:
+  Version bump.
 
 *Roman-1.230.0-r1 (22 Aug 2014)
 
