@@ -1,6 +1,10 @@
 # ChangeLog for dev-qt/qtquick1
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtquick1/ChangeLog,v 1.14 2015/03/17 14:51:06 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtquick1/ChangeLog,v 1.15 2015/03/17 17:10:46 pesa Exp $
+
+  17 Mar 2015; Davide Pesavento <pesa@gentoo.org> -qtquick1-5.4.1.ebuild,
+  qtquick1-5.4.1-r1.ebuild:
+  old
 
 *qtquick1-5.4.1-r1 (17 Mar 2015)
 
