@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libinput
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libinput/ChangeLog,v 1.13 2015/03/15 13:18:23 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libinput/ChangeLog,v 1.14 2015/03/17 17:25:27 vapier Exp $
+
+  17 Mar 2015; Mike Frysinger <vapier@gentoo.org> libinput-0.9.0.ebuild:
+  Add arm64/ia64/m68k/s390/sh/sparc love #543582.
 
   15 Mar 2015; Pacho Ramos <pacho@gentoo.org> libinput-0.7.0.ebuild:
   x86 stable, bug 534012
